Fix double border

--- a/src/inspect_ai/_view/www/src/app/App.css
+++ b/src/inspect_ai/_view/www/src/app/App.css
@@ -54,6 +54,7 @@ body {
   --ag-header-font-weight: 500;
   --ag-header-text-color: var(--bs-secondary);
   --ag-font-family: var(--bs-body-font-family);
+  --ag-wrapper-border: none;
 }
 
 #app {
